fix(im-service): Stream.toList() → Collectors.toList() Java 8 兼容
- MessageReadService.java: 2 处 .toList() 替换
- GroupTagService.java: 1 处 .toList() 替换
- Stream.toList() 是 Java 16 API，项目 target 为 Java 8